--- a/src/account/account.css
+++ b/src/account/account.css
@@ -1,6 +1,34 @@
-.sign-up {
-  height: 100vh;
+.account {
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.account__main {
+  background-color: var(--bs-light);
+  flex: 0 0 100%;
+}
+
+.account__header {
+  background-color: var(--bs-primary);
+  padding: 16px;
+}
+
+@media (min-width: 576px) {
+  .account__main {
+    flex: 0 0 80%;
+  }
+}
+
+@media (min-width: 992px) {
+  .account__main {
+    flex: 0 0 50%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .account__main {
+    flex: 0 0 30%;
+  }
 }
