--- a/src/account/account.css
+++ b/src/account/account.css
@@ -1,10 +1,3 @@
-.account {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .account__main {
   background-color: var(--bs-light);
   flex: 0 0 100%;
@@ -13,6 +6,21 @@
 .account__header {
   background-color: var(--bs-primary);
   padding: 16px;
+}
+
+.account__sign-up {
+  position: relative;
+}
+
+.account__sign-up--loading {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (min-width: 576px) {
