--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@
   margin: 0;
   padding: 0;
 }
+
+.page-body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
