chore: uploading all changes

--- a/src/modules/error/error.css
+++ b/src/modules/error/error.css
@@ -1,4 +1,8 @@
+.error__wrapper {
+  background-color: var(--app-dark-bg);
+}
+
 .error {
-  background-color: var(--bs-light);
+  background-color: var(--app-white-bg);
   padding: 16px;
 }
