--- a/src/common/styles/index.css
+++ b/src/common/styles/index.css
@@ -1,9 +1,9 @@
-@import url("~@fontsource/roboto/300.css");
-@import url("~@fontsource/roboto/400.css");
-@import url("~@fontsource/roboto/500.css");
-@import url("~@fontsource/roboto/700.css");
-@import url("~bootstrap/dist/css/bootstrap.min.css");
-@import url("~react-toastify/dist/ReactToastify.min.css");
+@import url("@fontsource/roboto/300.css");
+@import url("@fontsource/roboto/400.css");
+@import url("@fontsource/roboto/500.css");
+@import url("@fontsource/roboto/700.css");
+@import url("bootstrap/dist/css/bootstrap.min.css");
+@import url("react-toastify/dist/ReactToastify.min.css");
 
 :root {
   --app-breakpoint-sm: 576px;
